feat: add eslint and prettier

--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "react-app",
   "version": "0.1.0",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production",
+    "start": "webpack serve",
+    "build": "webpack --env production",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
+    "format": "prettier --write --ignore-unknown .",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "node-sass": "^6.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -18,19 +20,36 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-transform-arrow-functions": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.2",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
-    "eslint": "^5.16.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^16.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.0.3",
     "mini-css-extract-plugin": "^2.4.5",
+    "prettier": "^2.4.1",
     "react-refresh": "^0.11.0",
     "style-loader": "^3.3.1",
-    "webpack": "^5.64.1",
+    "webpack": "^5.64.2",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0"
+    "webpack-dev-server": "^4.3.1"
   },
   "browserslist": [
     "last 3 chrome version",
