--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.11.5",
+    "@types/optimize-css-assets-webpack-plugin": "^5.0.4",
     "babel-runtime": "^6.26.0",
     "node-sass": "^6.0.1",
     "react": "^16.14.0",
@@ -26,6 +28,8 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.2",
+    "@types/react": "^17.0.35",
+    "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "babel-eslint": "^10.1.0",
@@ -47,8 +51,11 @@
     "prettier": "^2.4.1",
     "react-refresh": "^0.11.0",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.2.5",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.2",
     "webpack": "^5.64.2",
-    "webpack-cli": "^4.9.1",
+    "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.1"
   },
   "browserslist": [
