--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
     "@types/optimize-css-assets-webpack-plugin": "^5.0.4",
+    "antd": "^4.17.1",
     "babel-runtime": "^6.26.0",
-    "node-sass": "^6.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-query": "^3.33.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "3.1.1"
   },
@@ -27,6 +28,7 @@
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.2",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
@@ -48,8 +50,10 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.0.3",
     "mini-css-extract-plugin": "^2.4.5",
+    "node-sass": "^6.0.1",
     "prettier": "^2.4.1",
     "react-refresh": "^0.11.0",
+    "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.2.5",
     "ts-loader": "^9.2.6",
