--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/polyfill": "^7.11.5",
     "@types/optimize-css-assets-webpack-plugin": "^5.0.4",
     "antd": "^4.17.1",
+    "axios": "^0.24.0",
     "babel-runtime": "^6.26.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
