--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^16.14.0",
     "react-query": "^3.33.4",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-toastify": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
