--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@babel/plugin-transform-flow-strip-types": "^7.16.0",
     "@babel/polyfill": "^7.11.5",
     "@types/optimize-css-assets-webpack-plugin": "^5.0.4",
     "antd": "^4.17.1",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-proposal-decorators": "^7.16.4",
     "@babel/plugin-transform-arrow-functions": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
@@ -34,6 +36,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.2",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "babel-eslint": "^10.1.0",
