--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "eslint": "^7.32.0",
@@ -53,6 +54,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
+    "jest": "^27.4.5",
     "lint-staged": "^12.0.3",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^6.0.1",
