--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-query": "^3.33.4",
+    "react-query-devtools": "^2.6.3",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^5.0.0",
     "react-toastify": "^8.1.0"
   },
   "devDependencies": {
@@ -34,12 +35,12 @@
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
@@ -57,11 +58,13 @@
     "jest": "^27.4.5",
     "lint-staged": "^12.0.3",
     "mini-css-extract-plugin": "^2.4.5",
-    "node-sass": "^6.0.1",
+    "node-sass": "^7.0.1",
     "prettier": "^2.4.1",
     "react-refresh": "^0.11.0",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
+    "stylelint": "^14.2.0",
+    "stylelint-prettier": "^2.0.0",
     "terser-webpack-plugin": "^5.2.5",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
