--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "antd": "^4.17.1",
     "axios": "^0.24.0",
     "babel-runtime": "^6.26.0",
+    "fetch-mock": "^9.11.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-query": "^3.33.4",
     "react-query-devtools": "^2.6.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
-    "react-toastify": "^8.1.0"
+    "react-toastify": "^8.1.0",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -35,12 +37,16 @@
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "axios-mock-adapter": "^1.20.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
@@ -56,11 +62,13 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
+    "jest-mock-axios": "^4.5.0",
     "lint-staged": "^12.0.3",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^7.0.1",
     "prettier": "^2.4.1",
     "react-refresh": "^0.11.0",
+    "react-test-renderer": "^16.14.0",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.2.0",
